plugins {
    id 'java'
    id 'application'
}

group 'com.github.sbanal.littlepay'
version '1.0-SNAPSHOT'

compileJava {
    options.release = 22
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.apache.commons:commons-lang3:3.17.0")
    implementation("org.apache.commons:commons-csv:1.11.0")
    testImplementation(platform('org.junit:junit-bom:5.7.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation("org.mockito:mockito-core:3.+")
}

application {
    mainClass.set("com.github.sbanal.littlepay.LittlePayApp")
}

test {
    useJUnitPlatform()
}
